--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 * {
     padding: 0;
     margin: 0;
+    font-family: sans-serif;
 
 }
 
@@ -31,10 +32,10 @@ nav ul {
 #user-icon {
     color: #fff;
     background: red;
-    border-radius: 50%;
+    border-radius: 100%;
     text-align: center;
-    height: 22px;
-    width: 32px;
+    height: 12px;
+    width: 12px;
 }
 
 ul {
@@ -53,6 +54,7 @@ li a {
     text-align: center;
     text-decoration: none;
     padding: 14px;
+    line-height: 24px;
 }
 
 #nav-left {
@@ -66,13 +68,16 @@ li a {
 
 }
 
-input {
-    display: block;
 
-}
+.searchbar input {
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 20px;
+    width: 500px;
+    height: 25px;
+    border: silver solid 1px;
+    border-radius: 20px;
 
-.searchbar {
-    text-align: center;
 }
 
 #search img {
@@ -84,4 +89,18 @@ input {
 #search {
     text-align: center;
     padding-top: 140px;
+}
+
+button {
+    border: none;
+    background: #fff;
+    padding: 2em;
+}
+
+footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 50px;
+
 }
